tests/typechecker/should_fail/polymorphic_lets_2.csp
f =
    let
        h = error("Something")
    within (h+0, not h)
